--- a/bike/src/main/resources/application.properties
+++ b/bike/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:sqlite:bike.db
-spring.datasource.usrname=
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
