--- a/bike/src/main/resources/application.properties
+++ b/bike/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:sqlite:bike.db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.security.user.name=user
+spring.security.user.password=password
